public/stylesheets/style.css
/* ... */
.price {
  color: #061738;
}

.section--price .btn {
  margin-top: 1rem;
}

/*
  ============================================================================
  # Long
  ============================================================================
*/

.section--long {
  text-align: left;
}

/*
  ============================================================================
  # Features
  ============================================================================
*/

.feature {
  margin-top: 3rem;
}

.feature__figure {
  max-width: 400px;
  margin: 0 auto .25rem;
}

.feature__image {
  max-width: 320px;
}

.feature__title {
  margin: 0;
}

/*
  ============================================================================
  # Articles
  ============================================================================
*/

.nav-in__list {
  list-style-type: none;
  padding: 0;
}

.nav-in__item {
  margin-bottom: .25em;
}

.article__title {
  margin-top: .5rem;
}

.title--3 {
  margin-top: 2rem;
}

.aside {
  border: 2px solid #aaa;
  border-radius: 3px;
  padding: .5rem;
}

.article ol {
  border: 2px solid #aaa;
  border-radius: 3px;
  padding: .5rem .5rem 0 2.5rem;
}

.article li {
  margin-bottom: .5rem;
}

/*
  ============================================================================
  # Form section
  ============================================================================
*/

.section--form {
  text-align: left;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

/*
  ============================================================================
  # Form
  ============================================================================
*/

.form {
  /*margin-bottom: 1rem;*/
}

.input {
  display: block;
  width: 100%;
  max-width: 30rem;
  padding: .4em;
  margin: .1rem 0 .7rem;
  border: 1px solid #bbb;
  border-radius: 2px;
  font-family: Arial, Helvetica, sans-serif;
}

.input--narrow {
  display: inline-block;
  width: calc(100% - 35px);
  margin-right: .5rem;
}

.data-row--new {
  margin-bottom: 1rem;
}

.form-group--checkboxes {
}

.form-group--checkboxes .form__label {
  width: calc( 100% - 18px );
  float: right;
  margin-bottom: .5rem;
}

.checkbox {
  margin: 0 5px 0 0;
}

.g-recaptcha {
  margin: 1rem 0;
}

.remaining {
  display: none;
  font-size: .9em;
  color: red;
}

.remaining--visible {
  display: block;
}

.label__info {
  font-size: .9em;
}

/*
  ============================================================================
  # Buttons
  ============================================================================
*/

.btn {
  display: inline-block;
  border: none;
  padding: .3em .5em .3em;
  font-size: 1rem;
  border-radius: 2px;
  cursor: pointer;
  margin-right: .1rem;
  font-family: inherit;
}

.btn:disabled {
  background: #ddd;
  color: #999;
  cursor: default;
}

.btn--primary {
  background: #4d638d;
  background: linear-gradient(#4d638d, #2d4471);
  color: white!important;
  text-decoration: none!important;
}

.btn--primary:active {
  background: #2d4471;
}

.btn--secondary {
  background: #d4c16a;
  background: linear-gradient(#d4c16a, #aa9538);
  color: white;
}

.btn--secondary:active {
  background: #aa9538;
}

.btn--danger {
  background: #d4986a;
  background: linear-gradient(#d4986a, #aa6a38);
  color: white;
}

.btn--danger:active {
  background: #aa6a38;
}

.btn--big {
  padding: .5em 1.5em;
}

/*
  ============================================================================
  # Description lists
  ============================================================================
*/

.dt {
  font-weight: bold;
}

/*
  ============================================================================
  # Elements
  ============================================================================
*/

.notice {
  opacity: .5;
  margin-top: 1rem;
}

.copyright {
  margin: 2rem 0 0;
  font-size: .8em;
}

.privacy {
  font-size: .8em;
}

.fields {
  margin-bottom: .5rem;
}

.sponsors {
  text-align: center;
}

.sponsor {
  margin: 1rem 0;
  border-top: 1px solid #ccc;
}

.sponsor__title {
  margin: .5rem 0;
}

.sponsor__image {
  width: auto;
  max-width: 100%;
  max-height: 95vh;
}

/*
  ============================================================================
  # Uncategorized
  ============================================================================
*/

.hidden {
  display: none;
}

.ticketClass {
  text-align: right;
}

@media screen and (min-width: 768px) {
  .sidebar-col {
    min-height: calc(100vh - 56px);
  }
}

/*
  ============================================================================
  # Errors and messages
  ============================================================================
*/

.message__content {
  padding: .2rem;
  margin-top: .5rem;
}

.message__content--error {
  background: #b50202;
  color: white;
}

.message__content--success {
  background: #dcfbdc;
}

/*
  ============================================================================
  # Footer
  ============================================================================
*/

.footer {
  background: #2d4471;
  background: linear-gradient(to top left, #152B55, #4d638d);
  padding: 1rem .5rem;
  color: white;
  line-height: 1.3;
  text-align: center;
  font-weight: 300;
}

.footer__title {
  font-size: 1.1rem;
  font-weight: 500;
  margin: 0 0 .25rem;
}

.footer__nav {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.footer__link {
  color: white;
  text-decoration: none;
}

.footer__link:hover {
  text-decoration: underline;
}

.footer__content {
  max-width: 900px;
  margin: 0 auto;
  text-align: center;
}

.footer__content p {
  margin: 0;
}

/*
  ============================================================================
  # @media rules
  ============================================================================
*/

@media screen and (min-width: 390px) {
  .navbar__item--secondary {
    display: block;
  }
}
/* ... */

